[project]
name = "simple-agent"
authors = [{name = "Peter Ireland"}]
dynamic = ["version"]
description = "Simple AI agent for experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker",
    "faker",
    "litellm"
]
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
simple-agent = "simple_agent.main:run_agent"

[project.urls]
Homepage = "https://github.com/pjireland/simple-agent"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_agent"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff<1.0.0,>=0.12.1",
]

# LiteLLM doesn't support typing
# Since most of the code involves LiteLLM, doesn't seem worth it to do type checking
# [tool.pyright]
# include = ["src", "tests"]
# exclude = ["**/__pycache__"]
# venvPath = "."
# venv = ".venv"
#
# # Type checking settings
# typeCheckingMode = "basic"
# reportMissingImports = true
# reportMissingTypeStubs = true
# pythonVersion = "3.10"
# pythonPlatform = "Linux"
#
# # Additional checks
# reportUnusedImport = true
# reportUnusedVariable = true
# reportDuplicateImport = true

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = []
